dark grey login button

--- a/server/html/login.html
+++ b/server/html/login.html
@@ -24,7 +24,7 @@
       background-position: 12px center;
       background-repeat: no-repeat;
       color: rgba(255,255,255,0.87);
-      background-color: #303F9F;
+      background-color: #525252;
       text-decoration: none;
       box-shadow: 0 2px 5px rgba(0,0,0,0.5);
       display: inline-block;
