--- a/server/html/app.html
+++ b/server/html/app.html
@@ -31,15 +31,28 @@
         opacity: 0.5;
       }
 
-      ul#code {
+      #code {
         display: inline-block;
         list-style: none;
         padding-left: 0;
         text-align: left;
       }
 
-      ul#code > li {
+      #code tr {
         margin: 0.5em 0;
+      }
+
+      #code tr a {
+        display: inline-block;
+        max-width: 20em;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow-x: hidden;
+      }
+
+      #code tr paper-icon-button {
+        color: #ddd;
+        margin-left: 0.5em;
       }
 
       #app-update .status {
@@ -105,11 +118,22 @@
             <input type="hidden" name="app_url" />
           </form>
         </div>
-        <ul id="code">
-          {{#code}}
-          <li><a href="/app/{{app_id}}/edit/{{id}}">Edit Code ({{id}})</a></li>
-          {{/code}}
-        </ul>
+        <table id="code">
+          <tbody>
+            {{#code}}
+            <tr>
+              <td>
+                <a href="/app/{{app_id}}/edit/{{id}}">Edit Code ({{id}})</a>
+              </td>
+              <td>
+                <a href="javascript:ajax_delete('/app/{{app_id}}/edit/{{id}}', '{{id}}');">
+                  <paper-icon-button class="compact" icon="delete"></paper-icon-button>
+                </a>
+              </td>
+            </tr>
+            {{/code}}
+          </tbody>
+        </table>
       </div>
       <div id="fab">
         <form id="add_test" method="POST" action="/app/{{app.id}}/edit">
@@ -133,5 +157,17 @@
       },
       google_analytics: ga
     });
+  </script>
+  <script>
+    function ajax_delete(url, description) {
+      if (!confirm('Are you sure you want to delete "' + description + '"?')) {
+        return;
+      }
+      $.ajax(url, {
+        method: 'DELETE'
+      }).done(function() {
+        location.reload();
+      })
+    }
   </script>
 </html>
