--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -225,7 +225,7 @@
         <a href="/app/{{../code.app_id}}" alt="Apps">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
-        <div class="title">{{../code.id}}</div>
+        <div class="title">{{../code.name}}</div>
         <a href="/account" class="account" alt="{{displayName}}">
           <img src="{{avatarUrl}}"/>
         </a>
