user code name for rename placeholder

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -126,7 +126,7 @@
                 <a href="/app/{{app_id}}/edit/{{id}}">{{name}}</a>
               </td>
               <td>
-                <a href="javascript:rename('/app/{{app_id}}/edit/{{id}}', '{{id}}');">
+                <a href="javascript:rename('/app/{{app_id}}/edit/{{id}}', '{{name}}');">
                   <paper-icon-button class="compact" icon="create"></paper-icon-button>
                 </a>
               </td>
