--- a/server/html/login.html
+++ b/server/html/login.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Login - ChetBot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico">
 
     {{> material-design}}
