added feedback button to toolbar and docs button on edit page

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -99,10 +99,11 @@
         <a href="/apps" alt="Apps">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
+
         <div class="title">{{../app.name}}</div>
-        <a class="account" href="/account" alt="{{displayName}}">
-          <img src="{{avatarUrl}}"/>
-        </a>
+
+        {{> feedback-button}}
+        {{> account-button}}
       </paper-toolbar>
       {{/user}}
       <div class="content">
