--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit - ChetBot</title>
+    <title>{{code.name}} - ChetBot</title>
     <link rel="icon" href="{{app.icon}}">
 
     {{> material-design}}
@@ -225,10 +225,12 @@
         <a href="/app/{{../code.app_id}}" alt="Apps">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
+
         <div class="title">{{../code.name}}</div>
-        <a href="/account" class="account" alt="{{displayName}}">
-          <img src="{{avatarUrl}}"/>
-        </a>
+
+        {{> documentation-button}}
+        {{> feedback-button}}
+        {{> account-button}}
       </paper-toolbar>
       {{/user}}
       <div class="content">
