--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -79,15 +79,7 @@
       color: #fff;
     }
 
-    #controls .status {
-      float: right;
-      font-size: 0.67em;
-      padding-top: 0.33em;
-      transition: opacity 400ms ease-out;
-      opacity: 0;
-    }
-
-    body.saving #controls .status {
+    body.saving #controls .status.saving {
       opacity: 1;
     }
 
@@ -228,6 +220,7 @@
 
         <div class="title">{{../code.name}}</div>
 
+        {{> save-indicator}}
         {{> documentation-button}}
         {{> feedback-button}}
         {{> account-button}}
@@ -252,7 +245,6 @@
               <paper-icon-button icon="av:stop" alt="Run test"></paper-icon-button>
             </a>
             -->
-            <span class="saved status">Saving...</span>
           </div>
           <div id="editor">{{code.content}}</div>
           <div id="test-report">
