--- a/server/html/app.html
+++ b/server/html/app.html
@@ -103,6 +103,7 @@
         <div class="title">{{../app.name}}</div>
 
         {{> feedback-button}}
+        {{> admin-button}}
         {{> account-button}}
       </paper-toolbar>
       {{/user}}
