--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -99,6 +99,7 @@
         <div class="title">Apps</div>
 
         {{> feedback-button}}
+        {{> admin-button}}
         {{> account-button}}
       </paper-toolbar>
       {{/user}}
