--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -223,6 +223,7 @@
         {{> save-indicator}}
         {{> documentation-button}}
         {{> feedback-button}}
+        {{> admin-button}}
         {{> account-button}}
       </paper-toolbar>
       {{/user}}
