--- a/server/html/admin.html
+++ b/server/html/admin.html
@@ -69,6 +69,12 @@
               <td class="apps">
                 <ul>
                   {{#apps}}<li><a href="/app/{{.}}">{{.}}</a></li>{{/apps}}
+                  <li>
+                    <form method="POST" action="/apps">
+                      <input type="hidden" name="as_user" value="{{id}}" />
+                      <input type="submit" value="Add" />
+                    </form>
+                  </li>
                 </ul>
               </td>
             </tr>
