--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -263,10 +263,33 @@
 
   <!-- code editor -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ext-language_tools.js" charset="utf-8"></script>
   <script>
     var editor = ace.edit('editor');
+    var language_tools = ace.require('ace/ext/language_tools');
     editor.setTheme('ace/theme/tomorrow_night');
     editor.getSession().setMode('ace/mode/javascript');
+    editor.setOptions({
+      enableLiveAutocompletion: true,
+      enableSnippets: false
+    });
+
+    // TODO: fetch bultin functions from server
+    var builtin_fns = [
+      'function', 'for', 'var', // JS
+      'tap', 'press', 'type_text', 'hide_keyboard', 'wait', 'screenshot', // interaction
+      'view', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', // selectors
+       'location', 'size', 'text', 'id', 'class_of', 'exists', 'count', // inspection
+       'assert_true', 'assert_false', 'assert_equal', 'assert_exists' // assertions
+    ];
+    var my_completer = {
+      getCompletions: function(editor, session, pos, prefix, callback) {
+        callback(null, builtin_fns.map(function(f) {
+          return {caption: f, snippet: f};
+        }));
+      }
+    };
+    editor.completers = [language_tools.textCompleter, my_completer];
   </script>
 
   {{#autosave}}
