handle uncaught exceptions

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -183,6 +183,10 @@
       color: #D32F2F;
     }
 
+    #test-report .uncaught.error::before {
+      content: 'Uncaught error: ';
+    }
+
     #editor-container.editing #test-report {
       display: none;
     }
