--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -237,7 +237,7 @@
       <div class="content">
         <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7b%22chetbot.server%22%3a%22{{server}}%22%2c%22chetbot.device%22%3a%22{{device.id}}%22%7d" frameborder="0" scrolling="no"></iframe>
         <div id="device-controls">
-          <paper-fab mini title="Restart app" icon="refresh" class="secondary" onclick="var device_window = document.getElementById('device').contentWindow; device_window.postMessage('endSession', '*'); device_window.postMessage('requestSession', '*');"></paper-fab>
+          <paper-fab mini title="Restart app" icon="refresh" class="secondary" onclick="reset_device();"></paper-fab>
         </div>
         <div id="editor-container" class="editing">
           <div id="controls">
@@ -325,10 +325,15 @@
 
   <!-- heartbeat to prevent device timing out -->
   <script>
-  var device_iframe = document.querySelector('iframe');
-  setInterval(function() {
-    device_iframe.contentWindow.postMessage('heartbeat', '*');
-  }, 15 * 1000);
+    var device_iframe = document.getElementById('device');
+    setInterval(function() {
+      device_iframe.contentWindow.postMessage('heartbeat', '*');
+    }, 15 * 1000);
+
+    function reset_device() {
+      device_iframe.contentWindow.postMessage('endSession', '*');
+      device_iframe.contentWindow.postMessage('requestSession', '*');
+    }
   </script>
 
   <!-- test runner -->
