--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -35,6 +35,8 @@
         height: 3em;
         border: none;
         margin: 0 1em 1em 0;
+        -webkit-filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));
+        filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));
       }
 
       ul#apps h4 {
