--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -152,6 +152,7 @@
     #statusbar paper-icon-button {
       padding-top: 0;
       padding-bottom: 0;
+      margin: 0 0.5em;
       color: rgba(255,255,255,0.67);
     }
 
