CSS fix for updated paper-fab

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -58,6 +58,10 @@
       width: 320px;
     }
 
+    #device-controls > * {
+      display: inline-block;
+    }
+
     #controls {
       padding: 0 12px;
       height: 64px;
