allow loggin Java objects

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -188,8 +188,8 @@
       margin-right: 0.5em;
     }
 
-    #test-report li.result.bitmap img {
-      height: 300px;
+    #test-report .bitmap img {
+      max-height: 300px;
       margin-top: 0.5em;
       border: none;
     }
