Update autocomplete functions for 0.7.0

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -375,9 +375,10 @@
     // TODO: fetch bultin functions from server
     var builtin_fns = [
       'function', 'for', 'var', 'while', 'do', // JS
+      'activity', 'content_view', 'run_on_ui_thread', // Activity
       'tap', 'press', 'type_text', 'hide_keyboard', 'wait', 'screenshot', 'open_drawer', 'close_drawer', // interaction
-      'view', 'views', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', // selectors
-      'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'view_ids', // inspection
+      'view', 'views', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', 'closest_to', 'furthest_from',  // selectors
+      'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'all_ids', // inspection
       'assert_true', 'assert_false', 'assert_equal', 'assert_visible', // assertions
       'wait', 'wait_until_idle', 'wait_for' // wait
     ];
