more reliable result and console JSON serilaization

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -178,6 +178,10 @@
       color: rgba(0,0,0,0.87);
     }
 
+    #test-report li.result.none {
+      display: none;
+    }
+
     #test-report li.result, #test-report li.log {
       margin-right: 1em;
     }
