--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -60,6 +60,7 @@
 
     #device-controls > * {
       display: inline-block;
+      margin-left: 0.5em;
     }
 
     #controls {
@@ -294,9 +295,21 @@
         {{> account-button}}
       </paper-toolbar>
       {{/user}}
+      <paper-dialog class="location"
+          entry-animation="fade-in-animation"
+          exit-animation="fade-out-animation"
+          withBackdrop="true">
+        <paper-input name="lat" label="Latitude" type="number" min="-90" max="90" no-label-float="true"></paper-input>
+        <paper-input name="lon" label="Longitude" type="number" min="-180" max="180" no-label-float="true"></paper-input>
+        <div style="margin-top: 2em; text-align: right;">
+          <paper-button onclick="close_dialog(this);"><iron-icon icon="clear"></iron-icon>Cancel</paper-button>
+          <paper-button onclick="set_location(this); close_dialog(this);" class="primary"><iron-icon icon="communication:location-on"></iron-icon>Set</paper-button>
+        </div>
+      </paper-dialog>
       <div class="content">
         <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;osVersion=6.0&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7b%22chetbot.server%22%3a%22{{server}}%22%2c%22chetbot.device%22%3a%22{{device.id}}%22%7d" frameborder="0" scrolling="no"></iframe>
         <div id="device-controls">
+          <paper-fab mini title="Set device location" icon="communication:location-on" class="secondary" onclick="open_dialog('location');"></paper-fab>
           <paper-fab mini title="Restart app" icon="refresh" class="secondary" onclick="reset_device();"></paper-fab>
         </div>
         <div id="editor-container" class="editing">
@@ -369,9 +382,11 @@
       }
     }
 
+    {{#user}}
     repl = setup_repl('{{server}}', '{{device.id}}', 'repl', {
       onClose: toggle_repl
     });
+    {{/user}}
   </script>
 
   <!-- autocomplete -->
@@ -394,7 +409,7 @@
       }
     };
     editor.completers = [language_tools.textCompleter, my_completer];
-    repl.completers   = [my_completer];
+    if (repl) repl.completers   = [my_completer];
   </script>
 
   <script src="/js/rename-test.js"></script>
@@ -431,6 +446,23 @@
     function reset_device() {
       device_iframe.contentWindow.postMessage('endSession', '*');
       device_iframe.contentWindow.postMessage('requestSession', '*');
+    }
+  </script>
+
+  <script>
+    // Popup dialogs
+    function open_dialog(cls) {
+      $('paper-dialog.' + cls).get(0).open();
+    }
+    function close_dialog(button) {
+      $(button).parents('paper-dialog').get(0).close();
+    }
+    function set_location(button) {
+      // TODO: Send location to server
+      var $dialog = $(button).parents('paper-dialog'),
+          lat = parseFloat($dialog.find('paper-input[name=lat]').get(0).value),
+          lon = parseFloat($dialog.find('paper-input[name=lon]').get(0).value);
+      device_iframe.contentWindow.postMessage({type:'location', value:[lat, lon]}, '*');
     }
   </script>
 
