--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -310,7 +310,7 @@
         <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;osVersion=6.0&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7b%22chetbot.server%22%3a%22{{server}}%22%2c%22chetbot.device%22%3a%22{{device.id}}%22%7d" frameborder="0" scrolling="no"></iframe>
         <div id="device-controls">
           <paper-fab mini title="Set device location" icon="communication:location-on" class="secondary" onclick="open_dialog('location');"></paper-fab>
-          <paper-fab mini title="Restart app" icon="refresh" class="secondary" onclick="reset_device();"></paper-fab>
+          <paper-fab mini title="Restart device" icon="refresh" class="secondary" onclick="reset_device();"></paper-fab>
         </div>
         <div id="editor-container" class="editing">
           <div id="controls">
