--- a/server/html/app.html
+++ b/server/html/app.html
@@ -55,7 +55,8 @@
 
       #code tr paper-icon-button {
         color: #ddd;
-        margin-left: 0.5em;
+        padding: 0.5em 0;
+        margin-bottom: -1em;
       }
 
       #app-update .status {
