--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -296,10 +296,10 @@
       </paper-toolbar>
       {{/user}}
       {{#user}}
-      {{> set-location-dialog}}
+      {{> set-location-dialog ../code}}
       {{/user}}
       <div class="content">
-        <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;osVersion=6.0&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7b%22chetbot.server%22%3a%22{{server}}%22%2c%22chetbot.device%22%3a%22{{device.id}}%22%7d" frameborder="0" scrolling="no"></iframe>
+        <iframe id="device" src="https://appetize.io/embed/{{app.publicKey}}?device={{device.model}}&amp;osVersion=6.0&amp;scale=75&amp;autoplay=true&amp;orientation={{device.orientation}}&amp;deviceColor=black&amp;xdocMsg=true&amp;params=%7b%22chetbot.server%22%3a%22{{server}}%22%2c%22chetbot.device%22%3a%22{{device.id}}%22%7d{{#device.location}}&amp;location={{.}}{{/device.location}}" frameborder="0" scrolling="no"></iframe>
         <div id="device-controls">
           {{#user}}
           <paper-fab mini title="Set device location" icon="communication:location-on" class="secondary" onclick="open_dialog('location');"></paper-fab>
@@ -449,8 +449,24 @@
       // TODO: Send location to server
       var $dialog = $(button).parents('paper-dialog'),
           lat = parseFloat($dialog.find('paper-input[name=lat]').get(0).value),
-          lon = parseFloat($dialog.find('paper-input[name=lon]').get(0).value);
-      device_iframe.contentWindow.postMessage({type:'location', value:[lat, lon]}, '*');
+          lon = parseFloat($dialog.find('paper-input[name=lon]').get(0).value),
+          location_set = !isNaN(lat) && !isNaN(lon);
+      if (location_set) {
+        // Update the location on the device now
+        device_iframe.contentWindow.postMessage({type:'location', value:[lat, lon]}, '*');
+      }
+      // Save location to server
+      $.ajax(location.pathname + '/location', {
+        method: 'PUT',
+        contentType: 'text/plain; charset=UTF-8',
+        data: JSON.stringify(location_set ? {lat:lat, lon:lon} : null), // HACK: stored as plain text with JSON string
+        success: function() {
+          console.log('Location set: ', [lat, lon]);
+        },
+        error: function(e) {
+          console.error(e);
+        }
+      });
     }
   </script>
 
